Tancar sessio temporal

--- a/FrontEnd/app/src/main/res/values/colors.xml
+++ b/FrontEnd/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="turquesa_clar">#7FFFD4</color>
+    <color name="turquesa_fosc">#008B8B</color>
+    <color name="vermell">#FFFF0000</color>
 </resources>
