--- a/FrontEnd/app/src/main/res/layout/principal.xml
+++ b/FrontEnd/app/src/main/res/layout/principal.xml
@@ -55,6 +55,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
-        <!--app:headerLayout="@layout/nav_header_main"-->
+        app:menu="@menu/activity_main_drawer"
+        app:headerLayout="@layout/nav_header_main" />
 </androidx.drawerlayout.widget.DrawerLayout>
