--- a/FrontEnd/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FrontEnd/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,12 @@
             android:title="Recompenses" />
         <item
             android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_log_out"
+            android:orderInCategory="100"
             android:title="Log out"
-            android:titleTextColor="@android:color/holo_red_dark" />
+            android:textColor="@color/vermell"
+            android:titleTextColor="@color/vermell"
+            />
     </group>
+
 </menu>
