--- a/FrontEnd/app/src/main/res/layout/viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/viatge.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layout_viatge"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,31 +23,20 @@
                 app:popupTheme="@style/Theme.Travudget.PopupOverlay">
 
                 <ImageButton
-                    android:id="@+id/btn_menu"
+                    android:id="@+id/btn_return"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_menu_burger"
+                    android:src="@drawable/ic_return"
                     android:background="?attr/selectableItemBackgroundBorderless" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/textViewViatge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Viatges"
+                    android:text="NomViatge"
                     android:textColor="@android:color/white"
                     android:textSize="25sp" />
-
-                <ImageButton
-                    android:id="@+id/btn_add_viatge"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_plus"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="8dp"/>
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -56,12 +45,12 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <FrameLayout
+                android:id="@+id/content_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        </FrameLayout>
+            </FrameLayout>
 
         </ScrollView>
 
