--- a/FrontEnd/app/src/main/res/layout/viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/viatge.xml
@@ -38,6 +38,17 @@
                     android:textColor="@android:color/white"
                     android:textSize="25sp" />
 
+                <ImageButton
+                    android:id="@+id/btn_options"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_options"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="8dp"/>
+
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
