--- a/FrontEnd/app/src/main/res/layout/viatge_editar.xml
+++ b/FrontEnd/app/src/main/res/layout/viatge_editar.xml
@@ -11,7 +11,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/txtCancelar"
+            android:id="@+id/txtCancelarEdicio"
             android:layout_gravity="center"
             android:textColor="@android:color/white"
             android:layout_width="wrap_content"
