--- a/FrontEnd/app/src/main/res/layout/viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/viatge.xml
@@ -39,7 +39,7 @@
                     android:textSize="25sp" />
 
                 <ImageButton
-                    android:id="@+id/btn_options"
+                    android:id="@+id/btn_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -47,7 +47,7 @@
                     android:layout_gravity="right"
                     android:layout_marginEnd="8dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_options" />
+                    android:src="@drawable/ic_info" />
 
                 <ImageButton
                     android:id="@+id/btn_add_despesa"
