--- a/FrontEnd/app/src/main/res/layout/veure_viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/veure_viatge.xml
@@ -49,7 +49,7 @@
                     android:layout_gravity="right"
                     android:layout_marginEnd="8dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:src="@drawable/ic_options" />
+                    android:src="@drawable/ic_pencil" />
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -217,6 +217,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:orientation="vertical"
                 android:gravity="end"
                 android:background="@drawable/border"/>
@@ -271,6 +273,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:orientation="vertical"
                 android:gravity="end"
                 android:background="@drawable/border"/>
