--- a/FrontEnd/app/src/main/res/layout/veure_viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/veure_viatge.xml
@@ -216,6 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
