Consultar informes fet

--- a/FrontEnd/app/src/main/res/layout/crear_despesa.xml
+++ b/FrontEnd/app/src/main/res/layout/crear_despesa.xml
@@ -85,7 +85,7 @@
                     android:layout_weight="1"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:hint="Nom del viatge" />
+                    android:hint="Nom de la despesa" />
             </LinearLayout>
 
             <LinearLayout
