--- a/FrontEnd/app/src/main/res/layout/crear_despesa.xml
+++ b/FrontEnd/app/src/main/res/layout/crear_despesa.xml
@@ -453,6 +453,42 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/layoutDeutors"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/layoutUbicacio"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:gravity="end"
+                android:background="@drawable/border">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Compartir despesa"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="8dp" />
+
+                <Button
+                    android:id="@+id/buttonDeutors"
+                    android:layout_width="0dp"
+                    android:gravity="start"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="Selecciona usuaris"
+                    android:textColor="#555555"
+                    android:background="#00000000"
+                    android:textAllCaps="false" />
+
+            </LinearLayout>
+
         <LinearLayout
             android:id="@+id/layoutText"
             android:layout_width="match_parent"
@@ -461,7 +497,6 @@
             android:layout_below="@id/layoutUbicacio"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:gravity="start">
 
