--- a/FrontEnd/app/src/main/res/layout/veure_viatge.xml
+++ b/FrontEnd/app/src/main/res/layout/veure_viatge.xml
@@ -277,6 +277,7 @@
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:orientation="vertical"
+                android:layout_marginBottom="16dp"
                 android:gravity="end"
                 android:background="@drawable/border"/>
 
