--- a/FrontEnd/app/src/main/res/drawable/ic_plus.xml
+++ b/FrontEnd/app/src/main/res/drawable/ic_plus.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <path
-        android:fillColor="?attr/colorPrimary"
+        android:fillColor="#008B8B"
         android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10s10,-4.48 10,-10s-4.48,-10 -10,-10z"/>
 
     <path
