--- a/FrontEnd/app/src/main/res/layout/cards_despeses.xml
+++ b/FrontEnd/app/src/main/res/layout/cards_despeses.xml
@@ -97,7 +97,17 @@
                 android:textColor="@android:color/black"
                 android:layout_marginTop="8dp" />
 
+            <TextView
+                android:id="@+id/textAutor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Autor"
+                android:textSize="14sp"
+                android:layout_marginTop="8dp"/>
+
         </LinearLayout>
+
+
 
     </LinearLayout>
 
