--- a/FrontEnd/app/src/main/res/layout/crear_despesa.xml
+++ b/FrontEnd/app/src/main/res/layout/crear_despesa.xml
@@ -127,16 +127,38 @@
                     android:hint="Quantitat" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/creardespesa_text_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Categoria"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="20dp"
-                android:layout_below="@id/layoutPreu"/>
+            <LinearLayout
+                android:id="@+id/layoutNomCategoria"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical"
+                android:layout_below="@id/layoutPreu"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="6dp">
+
+                <TextView
+                    android:id="@+id/creardespesa_text_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Categoria"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/layoutPreu"/>
+
+                <TextView
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="*"
+                    android:textColor="#FF0000"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/layoutCategoria"
@@ -145,7 +167,6 @@
                 android:orientation="horizontal"
                 android:layout_below="@id/creardespesa_text_1"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:gravity="end"
