--- a/FrontEnd/app/src/main/res/layout/recompenses.xml
+++ b/FrontEnd/app/src/main/res/layout/recompenses.xml
@@ -67,18 +67,37 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
             <FrameLayout
                 android:id="@+id/content_frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+                android:layout_height="250dp">
             </FrameLayout>
 
-        </ScrollView>
+            <TextView
+                android:id="@+id/codis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Codis bescanviats prèviament"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="20dp"
+                android:layout_below="@id/content_frame"/>
+
+            <LinearLayout
+                android:id="@+id/layoutCodis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:orientation="vertical"
+                android:layout_marginBottom="16dp"
+                android:gravity="end"
+                android:background="@drawable/border"/>
+
 
     </LinearLayout>
 
